Refactor the Java ↔ Python bindings for using Panama instead of JPY. Work in progress.